@@ -3,6 +3,9 @@ update-manager (1:0.93.18) intrepid; urgency=low
   * DistUpgrade/DistUpgrade.cfg:
     - add KeepInstalled rule for adept to help
       the dependency resolver (thanks to MvG)
+  * DistUpgrade/DistUpgradeCache.py:
+    - remove the landscape special handling again, its
+      now installable again
   
  --
 
